--- a/index.html
+++ b/index.html
@@ -201,14 +201,41 @@
 
         const commands = {
             help: `Available commands:\n\nabout\nprojects\nskills\nexperience\ncontact\neducation\ncertifications\nleadership\nclear\n\nType any command to know about me!\n\n`,
-            about: "Hi, I’m Samar Abbas, a motivated and detail-oriented Computer Science student...",
-            projects: "Project details here...",
-            skills: "Skills list here...",
-            experience: "4+ Months as Software Developer",
-            contact: "Email: Samarabbas0425@gmail.com",
-            education: "BSc Computer Science, University of Narowal",
-            certifications: "AWS Certified, Google ML Crash Course",
-            leadership: "Tech Society Member, Computer Science Tutor",
+            about: "Hi, I’m Samar Abbas, a motivated and detail-oriented Computer Science student with a passion for Machine Learning and intelligent system design. I enjoy working on real-world problems through Python and ML technologies, constantly exploring new concepts and tools.",
+            projects: `Smart Traffic License Verification System
+→ Python, OCR – Streamlit, Tesseract OCR, OpenCV, Pandas
+→ License verification via CNIC scanning using OCR.
+
+AI ChatApp
+→ Python, AI – OpenAI API, pyttsx3, Streamlit
+→ Chatbot with Mistral API integration and custom UI.
+
+Smart Music Player with ML Integration
+→ Python – Pygame, Streamlit, planned ML features like voice command, genre prediction.
+
+Iris Flower Classification
+→ Scikit-learn, Pandas, Matplotlib
+→ Predicting flower species using classification algorithms.
+
+Diabetes Prediction using ML
+→ Pandas, Scikit-learn, Seaborn
+→ Trained models to predict diabetes using DT & RF algorithms.`,
+            skills: `Python, C++
+Machine Learning (Supervised & Unsupervised)
+Streamlit, OpenCV, Tesseract OCR
+Scikit-learn, Pandas, NumPy, Matplotlib, Seaborn
+AI Integration (OpenRouter API)`,
+            experience: `4+ Months as Software Developer`,
+            contact: `Email: Samarabbas0425@gmail.com`,
+            education: `BSc Computer Science
+University of Narowal (2022 – Current)
+6th Semester | CGPA: 3.87`,
+            certifications: `AWS Certified, Google ML Crash Course`,
+            leadership: `Tech Society Member, University of Narowal
+→ Organized ML sessions and coding workshops.
+
+Computer Science Tutor, Oxford Academy, Narowal
+→ Teaching Python, C++ and problem-solving.`,
             clear: "clear"
         };
 
